# remote-config-admin

./: README.md  pyproject.toml
remote_config_admin/: manage.py
remote_config_admin/remote_config_admin/: asgi.py  settings.py  urls.py  wsgi.py
